@@ -1,6 +1,8 @@
 0.11.0
 ------
 
+* Column constructor no longer takes a data_type argument.
+* Column.index and Column.name properties added.
 * Table.counts implemented. (#271)
 * Table.bins implemented. (#267, #227)
 * Table.join now raises ColumnDoesNotExistError. (#264)
